--- a/project-1.html
+++ b/project-1.html
@@ -124,7 +124,7 @@
             <div class="project-details__desc">
               <h3 class="project-details__content-title">Project Overview</h3>
               <p class="project-details__desc-para">
-                .................................................................................................................
+                .............................................................................:::::::::::::::::::::::::::::::::::::::::::::::::::::...................................
               </p>
               <p class="project-details__desc-para">
                 ''
@@ -146,7 +146,7 @@
             <div class="project-details__links">
               <h3 class="project-details__content-title">See Live</h3>
               <a
-                href="#"
+                href="https://princearora1309.github.io/Personal-Portfolio/index.html"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
                 >Live Link</a
