--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
               1st feb,2024
               </p>
               <a
-                href="./project-2.html"
+                href="#"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Case Study</a
@@ -260,7 +260,7 @@
                 1st March,2024
               </p>
               <a
-                href="./project-3.html"
+                href="#"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Case Study</a
