--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
-            As a beginner, I've laid a strong foundation in HTML, CSS, and JavaScript, honing my skills through hands-on projects and online courses. Each challenge I encounter is an opportunity to learn and grow, and I'm embracing the learning curve with enthusiasm.
+            As a beginner, I've laid a strong foundation in HTML, CSS, and JavaScript,  my skills through hands-on projects and online courses. Each challenge I encounter is an opportunity to learn and grow, and I'm embracing the learning curve with enthusiasm.
           </span>
         </h2>
         <div class="about__content">
