--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 
-    <title>PRiNCE Portfolio</title>
+    <title>PRiNCE MONGA Portfolio</title>
         <meta name="title" content="Welcome to Prince Monga's Portfolio!">
     <meta name="description" content="I'm Prince Monga, a web developer and co-founder of VidiPixels, currently studying at Ch. Devilal University. This is my personal portfolio, where I showcase my journey and projects in web development. As a quick learner with a passion for technology, I have gained a diverse skill set, including HTML, CSS, JavaScript, React, MySQL, Java, WordPress, Shopify, and more. This website features my first project, built from the ground up using HTML, CSS, and JavaScript, reflecting my commitment to growth and innovation in web development. Explore my work and connect with me to collaborate on exciting projects!" />
 
@@ -29,8 +29,8 @@
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
             <img
-              src="https://media.licdn.com/dms/image/D5603AQHsDwWXoSw1Iw/profile-displayphoto-shrink_400_400/0/1703350069176?e=1709164800&v=beta&t=koU7t96uKRddOT8hfwBVH2F6xEaNV_Uogk9kF7M75_A"
-              alt="Logo Image"
+              src="https://media.licdn.com/dms/image/v2/D5603AQG2EKOnOz7Lvg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1724245844021?e=1730937600&v=beta&t=eCOqRDDIPuls-YUXYp7elfC4XmtESIaehaqCoB8aMNE"
+              alt="Prince-Monga"
               class="header__logo-img"
             />
           </div>
@@ -106,16 +106,16 @@
           <a href="https://www.linkedin.com/in/prince-monga-/" class="home-hero__social-icon-link">
             <img
               src="https://img.icons8.com/?size=48&id=13930&format=png"
-              alt="icon"
+              alt="prince-monga-linkedin-profile"
               class="home-hero__social-icon"
             />
           </a>
         </div>
         <div class="home-hero__social">
-          <a href="https://github.com/princearora1309" class="home-hero__social-icon-link">
+          <a href="https://github.com/prince-monga" class="home-hero__social-icon-link">
             <img
               src="https://img.icons8.com/?size=50&id=12599&format=png"
-              alt="icon"
+              alt="prince-monga-gitub-profile"
               class="home-hero__social-icon"
             />
           </a>
@@ -133,7 +133,7 @@
           <a href="https://www.instagram.com/prince_arora1309?igsh=MXh5enVhaWNsOTNhbQ==" class="home-hero__social-icon-link">
             <img
               src="https://img.icons8.com/?size=48&id=32323&format=png"
-              alt="icon"
+              alt="prince-monga-instagram-profile"
               class="home-hero__social-icon"
             />
           </a>
@@ -145,7 +145,7 @@
           >
             <img
               src="https://img.icons8.com/?size=48&id=16713&format=png"
-              alt="icon"
+              alt="prince-monga-whatsapp-number"
               class="home-hero__social-icon"
             />
           </a>
@@ -338,7 +338,7 @@
                 <img
                   class="main-footer__icon"
                   src="https://img.icons8.com/?size=48&id=16713&format=png"
-                  alt="icon"
+                  alt="prince-monga-whatsapp-number"
                 />
               </a>
               <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/prince-monga-/">
@@ -346,14 +346,14 @@
                   class="main-footer__icon"
              
                   src="https://img.icons8.com/?size=48&id=13930&format=png"
-                  alt="icon"
+                  alt="prince-monga-linkedin-profile"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="https://github.com/princearora1309">
+              <a target="_blank" rel="noreferrer" href="https://github.com/prince-monga">
                 <img
                   class="main-footer__icon"
                   src="https://img.icons8.com/?size=64&id=u9R54eMKS8fw&format=png"
-                  alt="icon"
+                  alt="prince-monga-github-profile"
                 />
               </a>
               <a target="_blank" rel="noreferrer" href="#">
